--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <label>Senha</label>
                 <input type="password" name="senha" id="senha" placeholder="Insira sua senha" />
                 <img id="icone">
-                <input type="submit" value="Login" id="login" onclick="return validar()" >
+                <input type="submit" value="Login" id="login" >
             </form>
         </main>
     </body>
